--- a/contact-us/submit-a-complaint.html
+++ b/contact-us/submit-a-complaint.html
@@ -8,37 +8,27 @@
     {{ submit_a_complaint.sitewide_desc }}
 </p>
 <ul class="list list__icons">
-{%- if submit_a_complaint.phone_0_num %}
+{%- if submit_a_complaint.phone %}
     <li class="list_item">
         <span class="cf-icon cf-icon-phone list_icon"></span>
         <span class="h5 list_text">Phone:</span>
+    {%- for phone in submit_a_complaint.phone %}
         <p>
-            <a class="list_link list_link__phone" href="tel:{{ submit_a_complaint.phone_0_num }}">
-                {{ format_phone(submit_a_complaint.phone_0_num)| replace("2372", "CFPB (2372)") }}
-                {%- if submit_a_complaint.phone_0_desc %}
+            <a class="list_link list_link__phone" href="tel:{{ phone.num }}">
+                {{ format_phone(phone.num)| replace("2372", "CFPB (2372)") }}
+                {%- if phone.desc %}
                     <span class="micro-copy micro-copy__large">
-                        {{ submit_a_complaint.phone_0_desc }}
+                        {{ phone.desc }}
                     </span>
                 {%- endif %}
             </a>
         </p>
-    {%- if submit_a_complaint.phone_1_num %}
-        <p>
-            <a class="list_link list_link__phone" href="tel:{{ submit_a_complaint.phone_1_num }}">
-                {{ format_phone(submit_a_complaint.phone_1_num)| replace("2372", "CFPB (2372)") }}
-            {%- if submit_a_complaint.phone_1_desc %}
-                <span class="micro-copy micro-copy__large">
-                    {{ submit_a_complaint.phone_1_desc }}
-                </span>
-            {%- endif %}
-            </a>
-        </p>
-    {%- endif %}
+    {%- endfor %}
     </li>
 {%- endif %}
 </ul>
-{%- if submit_a_complaint.web_addr %}
-<a class="jump-link jump-link__right" href="{{ submit_a_complaint.web_addr }}">
-    {{ submit_a_complaint.web_desc if submit_a_complaint.web_desc else submit_a_complaint.web_addr }}
+{%- if submit_a_complaint.web.url %}
+<a class="jump-link jump-link__right" href="{{ submit_a_complaint.web.url }}">
+    {{ submit_a_complaint.web.label if submit_a_complaint.web.label else submit_a_complaint.web.url }}
 </a>
 {%- endif %}
