--- a/newsroom/featured-topic.html
+++ b/newsroom/featured-topic.html
@@ -24,8 +24,8 @@
                     <li class="list_item">
                         <!-- <span class="category-slug_icon cf-icon cf-icon-bullhorn"></span> -->
                         <a class="list_link jump-link jump-link__right"
-                           href="{{ link[0] }}">
-                           {{ link[1] }}
+                           href="{{ link.url }}">
+                           {{ link.label }}
                        </a>
                     </li>
                 {% endfor %}
