--- a/offices/_single.html
+++ b/offices/_single.html
@@ -20,8 +20,9 @@
     {% endif %}
 
     <section class="block block__flush-top content-l content-l__main content-l__large-gutters">
-        {% if office.intro_text %}
-        {% set show_subscription = office.intro_subscribe_form and office.intro_govdelivery_code %}
+        {% if office.intro.text %}
+        {% set intro = office.intro %}
+        {% set show_subscription = intro.subscribe_form and intro.govdelivery_code %}
         <section class="office_intro content-l_col
                         {% if show_subscription -%}
                             content-l_col-1-2
@@ -29,7 +30,7 @@
                             content-l_col-1
                         {%- endif %}
                         ">
-            <p class="h3">{{ office.intro_text | safe if office.intro_text }}</p>
+            <p class="h3">{{ intro.text | safe if intro.text }}</p>
         </section>
         {% endif %}
         {% if show_subscription %}
@@ -37,7 +38,7 @@
                 <p class="h3 u-show-on-mobile">Stay informed</p>
                 <p class="short-desc">Stay up to date with our email newsletter</p>
                 {% from "macros.html" import subscribe as subscribe with context %}
-                {{ subscribe(office.intro_govdelivery_code) }}
+                {{ subscribe(intro.govdelivery_code) }}
             </section>
         {% endif %}
     </section>
@@ -45,22 +46,22 @@
     {% if office.top_story %}
     {% set top_story = office.top_story %}
     <section class="office_featured block block__padded-top block__border-top">
-        {% if top_story.top_story_head %}
-        <h1 class="h3">{{ top_story.top_story_head | safe }}</h1>
+        {% if top_story.head %}
+        <h1 class="h3">{{ top_story.head | safe }}</h1>
         {% endif %}
         <div class="content-l content-l__main content-l__large-gutters">
-            {% if top_story.top_story_desc %}
+            {% if top_story.desc %}
             <div class="content-l_col content-l_col-1-2">
-                <p class="short-desc">{{ top_story.top_story_desc | safe }}</p>
+                <p class="short-desc">{{ top_story.desc | safe }}</p>
             </div>
             {% endif %}
-            {% if top_story.top_story_links %}
+            {% if top_story.links %}
             <div class="content-l_col content-l_col-1-2 content-l_col__before-divider">
                 <ul class="list__links">
-                {% for link in top_story.top_story_links %}
+                {% for link in top_story.links %}
                     <li class="list_item">
-                        <a class="jump-link jump-link__right list_link" href="{{ link[0] }}">
-                            {{link[1]}}
+                        <a class="jump-link jump-link__right list_link" href="{{ link.url }}">
+                            {{link.label}}
                         </a>
                     </li>
                 {% endfor %}
@@ -95,8 +96,8 @@
                     {% endif %}
 
                     {% if resource.link %}
-                    <a class="jump-link jump-link__right" href="{{ resource.link[0] if resource.link }}">
-                          {{ resource.link[1] }}
+                    <a class="jump-link jump-link__right" href="{{ resource.link.url if resource.link }}">
+                          {{ resource.link.label }}
                     </a>
                     {% endif %}
                 </div>
@@ -105,28 +106,32 @@
     </section>
     {% endif %}
 
-    {% if vars.initiatives %}
-    <section class="office_initiatives block block__sub block__padded-top block__border-top">
+    {% if vars.sub_pages %}
+    <section class="office_sub_pages block block__sub block__padded-top block__border-top">
         <h1 class="h2">
             Our Work
         </h1>
         <div class="content-l content-l__main content-l__large-gutters expandables-group">
-        {% for initiative in vars.initiatives %}
+        {% for page in vars.sub_pages if page.show_in_office == "on" %}
             <div class="office_initiative
                         expandable
                         expandable__expanded
                         expandable__mobile-only
                         content-l_col
-                        {% if vars.initiatives.result_dict|length > 1 -%}
+                        {% if vars.sub_pages.result_dict|length > 1 -%}
                             content-l_col-1-2
                         {% else -%}
                             content-l_col-1
                         {%- endif %}
                         ">
                 <button class="expandable_header expandable_target u-show-on-mobile">
-                    {% if initiative.title %}
+                    {% if page.short_title or page.title %}
                     <span class="expandable_header-left expandable_label">
-                        {{ initiative.title | safe }}
+                        {% if page.short_title %}
+                            {{ page.short_title | safe }}
+                        {% elif page.title %}
+                            {{ page.title | safe }}
+                        {% endif %}
                     </span>
                     {% endif %}
                     <span class="expandable_header-right expandable_link">
@@ -139,18 +144,22 @@
                     </span>
                 </button>
                 <div class="expandable_content">
-                    {% if initiative.title %}
+                    {% if page.short_title or page.title %}
                     <h2 class="h4 u-hide-on-mobile">
-                        {{ initiative.title | safe }}
+                        {% if page.short_title %}
+                            {{ page.short_title | safe }}
+                        {% elif page.title %}
+                            {{ page.title | safe }}
+                        {% endif %}
                     </h2>
                     {% endif %}
-                    {% if initiative.excerpt %}
+                    {% if page.excerpt %}
                     <p class="short-desc">
-                        {{ initiative.excerpt | safe }}
+                        {{ page.excerpt | safe }}
                     </p>
                     {% endif %}
-                    {% if initiative.slug %}
-                    <a class="jump-link jump-link__right" href="{{ '/initiatives/' + initiative.slug + '/' }}">
+                    {% if page.slug %}
+                    <a class="jump-link jump-link__right" href="{{ page.permalink }}">
                         Read more
                     </a>
                     {% endif %}
