--- a/sub-pages/_single.html
+++ b/sub-pages/_single.html
@@ -1,9 +1,9 @@
 {% extends "layout-side-nav.html" %}
-{% import "_vars-initiatives.html" as vars with context %}
-{% set active_nav_id = initiative.slug %}
+{% import "_vars-sub-pages.html" as vars with context %}
+{% set active_nav_id = sub_page.slug %}
 
 {% block title -%}
-    {{ initiative.title | safe if initiative.title }}
+    {{ sub_page.title | safe if sub_page.title }}
 {%- endblock %}
 
 {% block content_main_modifiers -%}
@@ -15,42 +15,42 @@
     {% from "post-macros.html" import activity_snippets as activity_snippets with context %}
     {% set activities_feed = activity_snippets(tag, activity_type) %}
 
-    {% if initiative.title %}
-    <h1>{{ initiative.title | safe }}</h1>
+    {% if sub_page.title %}
+    <h1>{{ sub_page.title | safe }}</h1>
     {% endif %}
 
-    {% if initiative.content %}
+    {% if sub_page.content %}
     <section class="initiative_description block block__flush-top">
-        {{ initiative.content | safe }}
+        {{ sub_page.content | safe }}
     </section>
     {% endif %}
 
-    {% if vars.subinitiatives %}
+    {% if vars.sub_pages %}
     <section class="block block__padded-top block__border-top block__flush-bottom">
         <div class="content-l content-l__main">
-            {% for subinitiative in vars.subinitiatives %}
+            {% for page in vars.sub_pages %}
             <!-- TODO: link header styles -->
             <div class="initiative_topic block__sub block__flush-top
-                        {{ 'office_col' if vars.subinitiatives.result_dict|length > 1 else 'content-l_col-1' -}}">
+                        {{ 'office_col' if vars.sub_pages.result_dict|length > 1 else 'content-l_col-1' -}}">
 
-                {% if subinitiative.title %}
+                {% if page.title %}
                 <h2 class="h3">
-                    {{ subinitiative.title | safe }}
+                    {{ page.title | safe }}
                 </h2>
                 {% endif %}
 
-                {% if subinitiative.content %}
+                {% if page.content %}
                 <p class="short-desc">
-                    {{ subinitiative.content | safe }}
+                    {{ page.content | safe }}
                 </p>
                 {% endif %}
 
-                {% if subinitiative.related_links %}
+                {% if page.related_links %}
                 <ul class="list__links">
-                {% for link in subinitiative.related_links %}
+                {% for link in page.related_links %}
                     <li class="list_item">
-                        <a class="jump-link jump-link__right list_link" href="{{link[0] if link[0]}}">
-                            {{ link[1] if link[1] }}
+                        <a class="jump-link jump-link__right list_link" href="{{link.url}}">
+                            {{ link.label }}
                         </a>
                     </li>
                 {% endfor %}
