Fixing typo and incorrect entry to changelog

--- a/external-site/index.html
+++ b/external-site/index.html
@@ -82,7 +82,7 @@
 		<a href="{{ external_url }}" class="btn
 		                                    btn__full
 		                                    external-site_proceed-btn">
-			Procced to external site
+			Proceed to external site
 		</a>
 	</section>
 {% endblock %}
