More friendly text
Sorry for the bad branch name.

--- a/external-site/index.html
+++ b/external-site/index.html
@@ -70,7 +70,7 @@
             informative and enjoyable.
         </p>
         <p class="short-desc short-desc__large u-js-only">
-            The new page will reload in: <span class="external-site_reload-container"
+            We’ll take you to the page in: <span class="external-site_reload-container"
                                                data-url="{{ external_url }}">
                                          </span>
         </p>
