--- a/external-site/index.html
+++ b/external-site/index.html
@@ -5,37 +5,37 @@
 {% set request_url_param = request.args.get('ext_url') or '' -%}
 {% set external_url = request_url_param or request_host %}
 
-{# Turning this feature off until sanitized_domains is implemented.
-	{% import "_vars-external-site.html" as vars with context %}
+{# TODO: Feature is disabled. Turn on when sanitized_domains is implemented.
+    {% import "_vars-external-site.html" as vars with context %}
 
-	// Determine if url param is in sanitized domains.
-	{% set external_dict = {'is_external': false} %}
-	{% set _ignore = external_dict.update({ 'is_external' : true })
-	                 if ( request_url_param.find('www.' + domain)  > -1 )
-	                 or ( request_url_param.find('//' + domain)  > -1 )
-	 %}
-	{% endfor %}
-	{% set external_url = (request_url_param if external_dict.is_external)
-	                      or request_host
-	%}
+    // Determine if url param is in sanitized domains.
+    {% set external_dict = {'is_external': false} %}
+    {% set _ignore = external_dict.update({ 'is_external' : true })
+                     if ( request_url_param.find('www.' + domain)  > -1 )
+                     or ( request_url_param.find('//' + domain)  > -1 )
+     %}
+    {% endfor %}
+    {% set external_url = (request_url_param if external_dict.is_external)
+                          or request_host
+    %}
 #}
 
 {% block title -%}
-	External Site
+    External Site
 {%- endblock %}
 
 {% block desc -%}
-   	External Site
+    External Site
 {%- endblock %}
 
 {% block header -%}
-	</div>
-	<div class='sliding-nav_page'>
-	<header class="header
-	               wrapper
-	               wrapper__match-content"
-	        role="banner">
-       	<a href="/">
+    </div>
+    <div class='sliding-nav_page'>
+    <header class="header
+                   wrapper
+                   wrapper__match-content"
+            role="banner">
+        <a href="/">
             <img class="header_logo u-js-only"
                  src="/static/img/logo_sm-exec.svg"
                  onerror="this.onerror=null;this.src='/static/img/logo_sm-exec.png';"
@@ -57,32 +57,32 @@
 {%- endblock %}
 
 {% block content_modifiers -%}
-	external-site_container
+    external-site_container
 {%- endblock %}
 
 {% block content_main %}
-	<section class='padded-container'>
-		<h1>Thank you for visiting consumerfinance.gov.</h1>
-		<p class="short-desc short-desc__large">
-			You are leaving the CFPB web server.  You will now access
-			<span class="external-site_text">{{ external_url }}</span>,<br>
-			which may have different privacy policies.  We hope your visit was
-			informative and enjoyable.
-		</p>
-		<p class="short-desc short-desc__large u-js-only">
-			The new page will reload in: <span class="external-site_reload-container"
-			                                   data-url="{{ external_url }}">
-			                             </span>
-		</p>
-		<a href="{{ request_referrer }}" class="btn
-		                                        btn__full
-		                                        external-site_back-btn ">
-			Go Back
-		</a>
-		<a href="{{ external_url }}" class="btn
-		                                    btn__full
-		                                    external-site_proceed-btn">
-			Proceed to external site
-		</a>
-	</section>
+    <section class='padded-container'>
+        <h1>Thank you for visiting consumerfinance.gov.</h1>
+        <p class="short-desc short-desc__large">
+            You are leaving the CFPB web server.  You will now access
+            <span class="external-site_text">{{ external_url }}</span>,<br>
+            which may have different privacy policies.  We hope your visit was
+            informative and enjoyable.
+        </p>
+        <p class="short-desc short-desc__large u-js-only">
+            The new page will reload in: <span class="external-site_reload-container"
+                                               data-url="{{ external_url }}">
+                                         </span>
+        </p>
+        <a href="{{ request_referrer }}" class="btn
+                                                btn__full
+                                                external-site_back-btn ">
+            Go Back
+        </a>
+        <a href="{{ external_url }}" class="btn
+                                            btn__full
+                                            external-site_proceed-btn">
+            Proceed to external site
+        </a>
+    </section>
 {% endblock %}
