Renamed a hide class to more descriptive name, fixed typo and tried to implemented some tests for later

--- a/initiatives/submit-a-request/index.html
+++ b/initiatives/submit-a-request/index.html
@@ -158,7 +158,7 @@
                 </div>
             </fieldset>
 
-            <div class="form-l_col form-l_col-1 js-remove-to-reveal"
+            <div class="form-l_col form-l_col-1 js-is-hidden"
                  id="foia-request-fee-waiver-justify">
                 <label>
                     <span class="form-label-header">
@@ -250,7 +250,7 @@
                 </div>
             </fieldset>
 
-            <fieldset class="u-reset js-remove-to-reveal" id="foia-request_organization-info">
+            <fieldset class="u-reset js-is-hidden" id="foia-request_organization-info">
                 <div class="form-l_col form-l_col-1">
                     <label class="form-label-header"
                            for="foia-request_organization-name">
