--- a/newsroom/index.html
+++ b/newsroom/index.html
@@ -74,7 +74,7 @@
                     ]) -}}
                 </section>
                 <section class="block content-l_col content-l_col-1-2">
-                    {% include "upcoming-events.html" %}
+                    {% include "templates/upcoming-events.html" %}
                 </section>
             </div>
         </div>
