--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -15,8 +15,10 @@
             <h1>Contact us</h1>
             <div class="content-l content-l__full">
                 <section class="content-l_col content-l_col-1-2">
+                    {% include "submit-a-complaint.html" %}
                 </section>
                 <section class="content-l_col content-l_col-1-2 content-l_col__before-divider">
+                    {% include "general-inquiries.html" %}
                 </section>
             </div>
         </section>
